parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    EXIT
    ID
    LENGTH
    LIST
    PRINT
    SCAN
    STRING

Grammar

Rule 0     S' -> prog
Rule 1     prog -> <empty>
Rule 2     prog -> func prog
Rule 3     func -> DEF type iden ( flist ) { body }
Rule 4     func -> DEF type iden ( flist ) RETURN expr ;
Rule 5     body -> <empty>
Rule 6     body -> stmt body
Rule 7     stmt -> expr ;
Rule 8     stmt -> defvar ;
Rule 9     stmt -> IF ( expr ) stmt
Rule 10    stmt -> IF ( expr ) stmt ELSE stmt
Rule 11    stmt -> WHILE ( expr ) stmt
Rule 12    stmt -> FOR ( iden = expr TO expr ) stmt
Rule 13    stmt -> RETURN expr ;
Rule 14    stmt -> { body }
Rule 15    stmt -> func
Rule 16    defvar -> VAR type iden
Rule 17    defvar -> VAR type iden = expr
Rule 18    flist -> <empty>
Rule 19    flist -> type iden
Rule 20    flist -> type iden , flist
Rule 21    clist -> <empty>
Rule 22    clist -> expr
Rule 23    clist -> expr , clist
Rule 24    expr -> expr [ expr ]
Rule 25    expr -> [ clist ]
Rule 26    expr -> expr ? expr : expr
Rule 27    expr -> expr + expr
Rule 28    expr -> expr - expr
Rule 29    expr -> expr * expr
Rule 30    expr -> expr / expr
Rule 31    expr -> expr % expr
Rule 32    expr -> expr > expr
Rule 33    expr -> expr < expr
Rule 34    expr -> expr EQUALS expr
Rule 35    expr -> expr HEQ expr
Rule 36    expr -> expr LEQ expr
Rule 37    expr -> expr NOTEQ expr
Rule 38    expr -> expr OR expr
Rule 39    expr -> expr AND expr
Rule 40    expr -> ! expr
Rule 41    expr -> + expr
Rule 42    expr -> - expr
Rule 43    expr -> iden
Rule 44    expr -> iden = expr
Rule 45    expr -> iden ( clist )
Rule 46    expr -> num
Rule 47    expr -> str
Rule 48    iden -> IDEN
Rule 49    num -> NUMBER
Rule 50    str -> STR
Rule 51    type -> INT
Rule 52    type -> NULL
Rule 53    type -> VECTOR

Terminals, with rules where they appear

!                    : 40
%                    : 31
(                    : 3 4 9 10 11 12 45
)                    : 3 4 9 10 11 12 45
*                    : 29
+                    : 27 41
,                    : 20 23
-                    : 28 42
/                    : 30
:                    : 26
;                    : 4 7 8 13
<                    : 33
=                    : 12 17 44
>                    : 32
?                    : 26
AND                  : 39
COMMENT              : 
DEF                  : 3 4
ELSE                 : 10
EQUALS               : 34
EXIT                 : 
FOR                  : 12
HEQ                  : 35
ID                   : 
IDEN                 : 48
IF                   : 9 10
INT                  : 51
LENGTH               : 
LEQ                  : 36
LIST                 : 
NOTEQ                : 37
NULL                 : 52
NUMBER               : 49
OR                   : 38
PRINT                : 
RETURN               : 4 13
SCAN                 : 
STR                  : 50
STRING               : 
TO                   : 12
VAR                  : 16 17
VECTOR               : 53
WHILE                : 11
[                    : 24 25
]                    : 24 25
error                : 
{                    : 3 14
}                    : 3 14

Nonterminals, with rules where they appear

body                 : 3 6 14
clist                : 23 25 45
defvar               : 8
expr                 : 4 7 9 10 11 12 12 13 17 22 23 24 24 26 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 42 44
flist                : 3 4 20
func                 : 2 15
iden                 : 3 4 12 16 17 19 20 43 44 45
num                  : 46
prog                 : 2 0
stmt                 : 6 9 10 10 11 12
str                  : 47
type                 : 3 4 16 17 19 20

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> .
    (2) prog -> . func prog
    (3) func -> . DEF type iden ( flist ) { body }
    (4) func -> . DEF type iden ( flist ) RETURN expr ;

    $end            reduce using rule 1 (prog -> .)
    DEF             shift and go to state 3

    prog                           shift and go to state 1
    func                           shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (2) prog -> func . prog
    (1) prog -> .
    (2) prog -> . func prog
    (3) func -> . DEF type iden ( flist ) { body }
    (4) func -> . DEF type iden ( flist ) RETURN expr ;

    $end            reduce using rule 1 (prog -> .)
    DEF             shift and go to state 3

    func                           shift and go to state 2
    prog                           shift and go to state 4

state 3

    (3) func -> DEF . type iden ( flist ) { body }
    (4) func -> DEF . type iden ( flist ) RETURN expr ;
    (51) type -> . INT
    (52) type -> . NULL
    (53) type -> . VECTOR

    INT             shift and go to state 6
    NULL            shift and go to state 7
    VECTOR          shift and go to state 8

    type                           shift and go to state 5

state 4

    (2) prog -> func prog .

    $end            reduce using rule 2 (prog -> func prog .)


state 5

    (3) func -> DEF type . iden ( flist ) { body }
    (4) func -> DEF type . iden ( flist ) RETURN expr ;
    (48) iden -> . IDEN

    IDEN            shift and go to state 10

    iden                           shift and go to state 9

state 6

    (51) type -> INT .

    IDEN            reduce using rule 51 (type -> INT .)


state 7

    (52) type -> NULL .

    IDEN            reduce using rule 52 (type -> NULL .)


state 8

    (53) type -> VECTOR .

    IDEN            reduce using rule 53 (type -> VECTOR .)


state 9

    (3) func -> DEF type iden . ( flist ) { body }
    (4) func -> DEF type iden . ( flist ) RETURN expr ;

    (               shift and go to state 11


state 10

    (48) iden -> IDEN .

    (               reduce using rule 48 (iden -> IDEN .)
    ,               reduce using rule 48 (iden -> IDEN .)
    )               reduce using rule 48 (iden -> IDEN .)
    =               reduce using rule 48 (iden -> IDEN .)
    ;               reduce using rule 48 (iden -> IDEN .)
    [               reduce using rule 48 (iden -> IDEN .)
    ?               reduce using rule 48 (iden -> IDEN .)
    +               reduce using rule 48 (iden -> IDEN .)
    -               reduce using rule 48 (iden -> IDEN .)
    *               reduce using rule 48 (iden -> IDEN .)
    /               reduce using rule 48 (iden -> IDEN .)
    %               reduce using rule 48 (iden -> IDEN .)
    >               reduce using rule 48 (iden -> IDEN .)
    <               reduce using rule 48 (iden -> IDEN .)
    EQUALS          reduce using rule 48 (iden -> IDEN .)
    HEQ             reduce using rule 48 (iden -> IDEN .)
    LEQ             reduce using rule 48 (iden -> IDEN .)
    NOTEQ           reduce using rule 48 (iden -> IDEN .)
    OR              reduce using rule 48 (iden -> IDEN .)
    AND             reduce using rule 48 (iden -> IDEN .)
    ]               reduce using rule 48 (iden -> IDEN .)
    :               reduce using rule 48 (iden -> IDEN .)
    TO              reduce using rule 48 (iden -> IDEN .)


state 11

    (3) func -> DEF type iden ( . flist ) { body }
    (4) func -> DEF type iden ( . flist ) RETURN expr ;
    (18) flist -> .
    (19) flist -> . type iden
    (20) flist -> . type iden , flist
    (51) type -> . INT
    (52) type -> . NULL
    (53) type -> . VECTOR

    )               reduce using rule 18 (flist -> .)
    INT             shift and go to state 6
    NULL            shift and go to state 7
    VECTOR          shift and go to state 8

    type                           shift and go to state 12
    flist                          shift and go to state 13

state 12

    (19) flist -> type . iden
    (20) flist -> type . iden , flist
    (48) iden -> . IDEN

    IDEN            shift and go to state 10

    iden                           shift and go to state 14

state 13

    (3) func -> DEF type iden ( flist . ) { body }
    (4) func -> DEF type iden ( flist . ) RETURN expr ;

    )               shift and go to state 15


state 14

    (19) flist -> type iden .
    (20) flist -> type iden . , flist

    )               reduce using rule 19 (flist -> type iden .)
    ,               shift and go to state 16


state 15

    (3) func -> DEF type iden ( flist ) . { body }
    (4) func -> DEF type iden ( flist ) . RETURN expr ;

    {               shift and go to state 17
    RETURN          shift and go to state 18


state 16

    (20) flist -> type iden , . flist
    (18) flist -> .
    (19) flist -> . type iden
    (20) flist -> . type iden , flist
    (51) type -> . INT
    (52) type -> . NULL
    (53) type -> . VECTOR

    )               reduce using rule 18 (flist -> .)
    INT             shift and go to state 6
    NULL            shift and go to state 7
    VECTOR          shift and go to state 8

    type                           shift and go to state 12
    flist                          shift and go to state 19

state 17

    (3) func -> DEF type iden ( flist ) { . body }
    (5) body -> .
    (6) body -> . stmt body
    (7) stmt -> . expr ;
    (8) stmt -> . defvar ;
    (9) stmt -> . IF ( expr ) stmt
    (10) stmt -> . IF ( expr ) stmt ELSE stmt
    (11) stmt -> . WHILE ( expr ) stmt
    (12) stmt -> . FOR ( iden = expr TO expr ) stmt
    (13) stmt -> . RETURN expr ;
    (14) stmt -> . { body }
    (15) stmt -> . func
    (24) expr -> . expr [ expr ]
    (25) expr -> . [ clist ]
    (26) expr -> . expr ? expr : expr
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . expr * expr
    (30) expr -> . expr / expr
    (31) expr -> . expr % expr
    (32) expr -> . expr > expr
    (33) expr -> . expr < expr
    (34) expr -> . expr EQUALS expr
    (35) expr -> . expr HEQ expr
    (36) expr -> . expr LEQ expr
    (37) expr -> . expr NOTEQ expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . ! expr
    (41) expr -> . + expr
    (42) expr -> . - expr
    (43) expr -> . iden
    (44) expr -> . iden = expr
    (45) expr -> . iden ( clist )
    (46) expr -> . num
    (47) expr -> . str
    (16) defvar -> . VAR type iden
    (17) defvar -> . VAR type iden = expr
    (3) func -> . DEF type iden ( flist ) { body }
    (4) func -> . DEF type iden ( flist ) RETURN expr ;
    (48) iden -> . IDEN
    (49) num -> . NUMBER
    (50) str -> . STR

    }               reduce using rule 5 (body -> .)
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    RETURN          shift and go to state 29
    {               shift and go to state 21
    [               shift and go to state 31
    !               shift and go to state 34
    +               shift and go to state 32
    -               shift and go to state 33
    VAR             shift and go to state 37
    DEF             shift and go to state 3
    IDEN            shift and go to state 10
    NUMBER          shift and go to state 38
    STR             shift and go to state 39

    iden                           shift and go to state 20
    body                           shift and go to state 22
    stmt                           shift and go to state 23
    expr                           shift and go to state 24
    defvar                         shift and go to state 25
    func                           shift and go to state 30
    num                            shift and go to state 35
    str                            shift and go to state 36

state 18

    (4) func -> DEF type iden ( flist ) RETURN . expr ;
    (24) expr -> . expr [ expr ]
    (25) expr -> . [ clist ]
    (26) expr -> . expr ? expr : expr
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . expr * expr
    (30) expr -> . expr / expr
    (31) expr -> . expr % expr
    (32) expr -> . expr > expr
    (33) expr -> . expr < expr
    (34) expr -> . expr EQUALS expr
    (35) expr -> . expr HEQ expr
    (36) expr -> . expr LEQ expr
    (37) expr -> . expr NOTEQ expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . ! expr
    (41) expr -> . + expr
    (42) expr -> . - expr
    (43) expr -> . iden
    (44) expr -> . iden = expr
    (45) expr -> . iden ( clist )
    (46) expr -> . num
    (47) expr -> . str
    (48) iden -> . IDEN
    (49) num -> . NUMBER
    (50) str -> . STR

    [               shift and go to state 31
    !               shift and go to state 34
    +               shift and go to state 32
    -               shift and go to state 33
    IDEN            shift and go to state 10
    NUMBER          shift and go to state 38
    STR             shift and go to state 39

    iden                           shift and go to state 20
    expr                           shift and go to state 40
    num                            shift and go to state 35
    str                            shift and go to state 36

state 19

    (20) flist -> type iden , flist .

    )               reduce using rule 20 (flist -> type iden , flist .)


state 20

    (43) expr -> iden .
    (44) expr -> iden . = expr
    (45) expr -> iden . ( clist )

    ;               reduce using rule 43 (expr -> iden .)
    [               reduce using rule 43 (expr -> iden .)
    ?               reduce using rule 43 (expr -> iden .)
    +               reduce using rule 43 (expr -> iden .)
    -               reduce using rule 43 (expr -> iden .)
    *               reduce using rule 43 (expr -> iden .)
    /               reduce using rule 43 (expr -> iden .)
    %               reduce using rule 43 (expr -> iden .)
    >               reduce using rule 43 (expr -> iden .)
    <               reduce using rule 43 (expr -> iden .)
    EQUALS          reduce using rule 43 (expr -> iden .)
    HEQ             reduce using rule 43 (expr -> iden .)
    LEQ             reduce using rule 43 (expr -> iden .)
    NOTEQ           reduce using rule 43 (expr -> iden .)
    OR              reduce using rule 43 (expr -> iden .)
    AND             reduce using rule 43 (expr -> iden .)
    ,               reduce using rule 43 (expr -> iden .)
    ]               reduce using rule 43 (expr -> iden .)
    )               reduce using rule 43 (expr -> iden .)
    :               reduce using rule 43 (expr -> iden .)
    TO              reduce using rule 43 (expr -> iden .)
    =               shift and go to state 41
    (               shift and go to state 42


state 21

    (14) stmt -> { . body }
    (5) body -> .
    (6) body -> . stmt body
    (7) stmt -> . expr ;
    (8) stmt -> . defvar ;
    (9) stmt -> . IF ( expr ) stmt
    (10) stmt -> . IF ( expr ) stmt ELSE stmt
    (11) stmt -> . WHILE ( expr ) stmt
    (12) stmt -> . FOR ( iden = expr TO expr ) stmt
    (13) stmt -> . RETURN expr ;
    (14) stmt -> . { body }
    (15) stmt -> . func
    (24) expr -> . expr [ expr ]
    (25) expr -> . [ clist ]
    (26) expr -> . expr ? expr : expr
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . expr * expr
    (30) expr -> . expr / expr
    (31) expr -> . expr % expr
    (32) expr -> . expr > expr
    (33) expr -> . expr < expr
    (34) expr -> . expr EQUALS expr
    (35) expr -> . expr HEQ expr
    (36) expr -> . expr LEQ expr
    (37) expr -> . expr NOTEQ expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . ! expr
    (41) expr -> . + expr
    (42) expr -> . - expr
    (43) expr -> . iden
    (44) expr -> . iden = expr
    (45) expr -> . iden ( clist )
    (46) expr -> . num
    (47) expr -> . str
    (16) defvar -> . VAR type iden
    (17) defvar -> . VAR type iden = expr
    (3) func -> . DEF type iden ( flist ) { body }
    (4) func -> . DEF type iden ( flist ) RETURN expr ;
    (48) iden -> . IDEN
    (49) num -> . NUMBER
    (50) str -> . STR

    }               reduce using rule 5 (body -> .)
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    RETURN          shift and go to state 29
    {               shift and go to state 21
    [               shift and go to state 31
    !               shift and go to state 34
    +               shift and go to state 32
    -               shift and go to state 33
    VAR             shift and go to state 37
    DEF             shift and go to state 3
    IDEN            shift and go to state 10
    NUMBER          shift and go to state 38
    STR             shift and go to state 39

    body                           shift and go to state 43
    stmt                           shift and go to state 23
    expr                           shift and go to state 24
    defvar                         shift and go to state 25
    iden                           shift and go to state 20
    func                           shift and go to state 30
    num                            shift and go to state 35
    str                            shift and go to state 36

state 22

    (3) func -> DEF type iden ( flist ) { body . }

    }               shift and go to state 44


state 23

    (6) body -> stmt . body
    (5) body -> .
    (6) body -> . stmt body
    (7) stmt -> . expr ;
    (8) stmt -> . defvar ;
    (9) stmt -> . IF ( expr ) stmt
    (10) stmt -> . IF ( expr ) stmt ELSE stmt
    (11) stmt -> . WHILE ( expr ) stmt
    (12) stmt -> . FOR ( iden = expr TO expr ) stmt
    (13) stmt -> . RETURN expr ;
    (14) stmt -> . { body }
    (15) stmt -> . func
    (24) expr -> . expr [ expr ]
    (25) expr -> . [ clist ]
    (26) expr -> . expr ? expr : expr
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . expr * expr
    (30) expr -> . expr / expr
    (31) expr -> . expr % expr
    (32) expr -> . expr > expr
    (33) expr -> . expr < expr
    (34) expr -> . expr EQUALS expr
    (35) expr -> . expr HEQ expr
    (36) expr -> . expr LEQ expr
    (37) expr -> . expr NOTEQ expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . ! expr
    (41) expr -> . + expr
    (42) expr -> . - expr
    (43) expr -> . iden
    (44) expr -> . iden = expr
    (45) expr -> . iden ( clist )
    (46) expr -> . num
    (47) expr -> . str
    (16) defvar -> . VAR type iden
    (17) defvar -> . VAR type iden = expr
    (3) func -> . DEF type iden ( flist ) { body }
    (4) func -> . DEF type iden ( flist ) RETURN expr ;
    (48) iden -> . IDEN
    (49) num -> . NUMBER
    (50) str -> . STR

    }               reduce using rule 5 (body -> .)
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    RETURN          shift and go to state 29
    {               shift and go to state 21
    [               shift and go to state 31
    !               shift and go to state 34
    +               shift and go to state 32
    -               shift and go to state 33
    VAR             shift and go to state 37
    DEF             shift and go to state 3
    IDEN            shift and go to state 10
    NUMBER          shift and go to state 38
    STR             shift and go to state 39

    stmt                           shift and go to state 23
    body                           shift and go to state 45
    expr                           shift and go to state 24
    defvar                         shift and go to state 25
    iden                           shift and go to state 20
    func                           shift and go to state 30
    num                            shift and go to state 35
    str                            shift and go to state 36

state 24

    (7) stmt -> expr . ;
    (24) expr -> expr . [ expr ]
    (26) expr -> expr . ? expr : expr
    (27) expr -> expr . + expr
    (28) expr -> expr . - expr
    (29) expr -> expr . * expr
    (30) expr -> expr . / expr
    (31) expr -> expr . % expr
    (32) expr -> expr . > expr
    (33) expr -> expr . < expr
    (34) expr -> expr . EQUALS expr
    (35) expr -> expr . HEQ expr
    (36) expr -> expr . LEQ expr
    (37) expr -> expr . NOTEQ expr
    (38) expr -> expr . OR expr
    (39) expr -> expr . AND expr

    ;               shift and go to state 46
    [               shift and go to state 47
    ?               shift and go to state 48
    +               shift and go to state 49
    -               shift and go to state 50
    *               shift and go to state 51
    /               shift and go to state 52
    %               shift and go to state 53
    >               shift and go to state 54
    <               shift and go to state 55
    EQUALS          shift and go to state 56
    HEQ             shift and go to state 57
    LEQ             shift and go to state 58
    NOTEQ           shift and go to state 59
    OR              shift and go to state 60
    AND             shift and go to state 61


state 25

    (8) stmt -> defvar . ;

    ;               shift and go to state 62


state 26

    (9) stmt -> IF . ( expr ) stmt
    (10) stmt -> IF . ( expr ) stmt ELSE stmt

    (               shift and go to state 63


state 27

    (11) stmt -> WHILE . ( expr ) stmt

    (               shift and go to state 64


state 28

    (12) stmt -> FOR . ( iden = expr TO expr ) stmt

    (               shift and go to state 65


state 29

    (13) stmt -> RETURN . expr ;
    (24) expr -> . expr [ expr ]
    (25) expr -> . [ clist ]
    (26) expr -> . expr ? expr : expr
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . expr * expr
    (30) expr -> . expr / expr
    (31) expr -> . expr % expr
    (32) expr -> . expr > expr
    (33) expr -> . expr < expr
    (34) expr -> . expr EQUALS expr
    (35) expr -> . expr HEQ expr
    (36) expr -> . expr LEQ expr
    (37) expr -> . expr NOTEQ expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . ! expr
    (41) expr -> . + expr
    (42) expr -> . - expr
    (43) expr -> . iden
    (44) expr -> . iden = expr
    (45) expr -> . iden ( clist )
    (46) expr -> . num
    (47) expr -> . str
    (48) iden -> . IDEN
    (49) num -> . NUMBER
    (50) str -> . STR

    [               shift and go to state 31
    !               shift and go to state 34
    +               shift and go to state 32
    -               shift and go to state 33
    IDEN            shift and go to state 10
    NUMBER          shift and go to state 38
    STR             shift and go to state 39

    expr                           shift and go to state 66
    iden                           shift and go to state 20
    num                            shift and go to state 35
    str                            shift and go to state 36

state 30

    (15) stmt -> func .

    IF              reduce using rule 15 (stmt -> func .)
    WHILE           reduce using rule 15 (stmt -> func .)
    FOR             reduce using rule 15 (stmt -> func .)
    RETURN          reduce using rule 15 (stmt -> func .)
    {               reduce using rule 15 (stmt -> func .)
    [               reduce using rule 15 (stmt -> func .)
    !               reduce using rule 15 (stmt -> func .)
    +               reduce using rule 15 (stmt -> func .)
    -               reduce using rule 15 (stmt -> func .)
    VAR             reduce using rule 15 (stmt -> func .)
    DEF             reduce using rule 15 (stmt -> func .)
    IDEN            reduce using rule 15 (stmt -> func .)
    NUMBER          reduce using rule 15 (stmt -> func .)
    STR             reduce using rule 15 (stmt -> func .)
    }               reduce using rule 15 (stmt -> func .)
    ELSE            reduce using rule 15 (stmt -> func .)


state 31

    (25) expr -> [ . clist ]
    (21) clist -> .
    (22) clist -> . expr
    (23) clist -> . expr , clist
    (24) expr -> . expr [ expr ]
    (25) expr -> . [ clist ]
    (26) expr -> . expr ? expr : expr
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . expr * expr
    (30) expr -> . expr / expr
    (31) expr -> . expr % expr
    (32) expr -> . expr > expr
    (33) expr -> . expr < expr
    (34) expr -> . expr EQUALS expr
    (35) expr -> . expr HEQ expr
    (36) expr -> . expr LEQ expr
    (37) expr -> . expr NOTEQ expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . ! expr
    (41) expr -> . + expr
    (42) expr -> . - expr
    (43) expr -> . iden
    (44) expr -> . iden = expr
    (45) expr -> . iden ( clist )
    (46) expr -> . num
    (47) expr -> . str
    (48) iden -> . IDEN
    (49) num -> . NUMBER
    (50) str -> . STR

    ]               reduce using rule 21 (clist -> .)
    [               shift and go to state 31
    !               shift and go to state 34
    +               shift and go to state 32
    -               shift and go to state 33
    IDEN            shift and go to state 10
    NUMBER          shift and go to state 38
    STR             shift and go to state 39

    clist                          shift and go to state 67
    expr                           shift and go to state 68
    iden                           shift and go to state 20
    num                            shift and go to state 35
    str                            shift and go to state 36

state 32

    (41) expr -> + . expr
    (24) expr -> . expr [ expr ]
    (25) expr -> . [ clist ]
    (26) expr -> . expr ? expr : expr
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . expr * expr
    (30) expr -> . expr / expr
    (31) expr -> . expr % expr
    (32) expr -> . expr > expr
    (33) expr -> . expr < expr
    (34) expr -> . expr EQUALS expr
    (35) expr -> . expr HEQ expr
    (36) expr -> . expr LEQ expr
    (37) expr -> . expr NOTEQ expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . ! expr
    (41) expr -> . + expr
    (42) expr -> . - expr
    (43) expr -> . iden
    (44) expr -> . iden = expr
    (45) expr -> . iden ( clist )
    (46) expr -> . num
    (47) expr -> . str
    (48) iden -> . IDEN
    (49) num -> . NUMBER
    (50) str -> . STR

    [               shift and go to state 31
    !               shift and go to state 34
    +               shift and go to state 32
    -               shift and go to state 33
    IDEN            shift and go to state 10
    NUMBER          shift and go to state 38
    STR             shift and go to state 39

    expr                           shift and go to state 69
    iden                           shift and go to state 20
    num                            shift and go to state 35
    str                            shift and go to state 36

state 33

    (42) expr -> - . expr
    (24) expr -> . expr [ expr ]
    (25) expr -> . [ clist ]
    (26) expr -> . expr ? expr : expr
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . expr * expr
    (30) expr -> . expr / expr
    (31) expr -> . expr % expr
    (32) expr -> . expr > expr
    (33) expr -> . expr < expr
    (34) expr -> . expr EQUALS expr
    (35) expr -> . expr HEQ expr
    (36) expr -> . expr LEQ expr
    (37) expr -> . expr NOTEQ expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . ! expr
    (41) expr -> . + expr
    (42) expr -> . - expr
    (43) expr -> . iden
    (44) expr -> . iden = expr
    (45) expr -> . iden ( clist )
    (46) expr -> . num
    (47) expr -> . str
    (48) iden -> . IDEN
    (49) num -> . NUMBER
    (50) str -> . STR

    [               shift and go to state 31
    !               shift and go to state 34
    +               shift and go to state 32
    -               shift and go to state 33
    IDEN            shift and go to state 10
    NUMBER          shift and go to state 38
    STR             shift and go to state 39

    expr                           shift and go to state 70
    iden                           shift and go to state 20
    num                            shift and go to state 35
    str                            shift and go to state 36

state 34

    (40) expr -> ! . expr
    (24) expr -> . expr [ expr ]
    (25) expr -> . [ clist ]
    (26) expr -> . expr ? expr : expr
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . expr * expr
    (30) expr -> . expr / expr
    (31) expr -> . expr % expr
    (32) expr -> . expr > expr
    (33) expr -> . expr < expr
    (34) expr -> . expr EQUALS expr
    (35) expr -> . expr HEQ expr
    (36) expr -> . expr LEQ expr
    (37) expr -> . expr NOTEQ expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . ! expr
    (41) expr -> . + expr
    (42) expr -> . - expr
    (43) expr -> . iden
    (44) expr -> . iden = expr
    (45) expr -> . iden ( clist )
    (46) expr -> . num
    (47) expr -> . str
    (48) iden -> . IDEN
    (49) num -> . NUMBER
    (50) str -> . STR

    [               shift and go to state 31
    !               shift and go to state 34
    +               shift and go to state 32
    -               shift and go to state 33
    IDEN            shift and go to state 10
    NUMBER          shift and go to state 38
    STR             shift and go to state 39

    expr                           shift and go to state 71
    iden                           shift and go to state 20
    num                            shift and go to state 35
    str                            shift and go to state 36

state 35

    (46) expr -> num .

    ;               reduce using rule 46 (expr -> num .)
    [               reduce using rule 46 (expr -> num .)
    ?               reduce using rule 46 (expr -> num .)
    +               reduce using rule 46 (expr -> num .)
    -               reduce using rule 46 (expr -> num .)
    *               reduce using rule 46 (expr -> num .)
    /               reduce using rule 46 (expr -> num .)
    %               reduce using rule 46 (expr -> num .)
    >               reduce using rule 46 (expr -> num .)
    <               reduce using rule 46 (expr -> num .)
    EQUALS          reduce using rule 46 (expr -> num .)
    HEQ             reduce using rule 46 (expr -> num .)
    LEQ             reduce using rule 46 (expr -> num .)
    NOTEQ           reduce using rule 46 (expr -> num .)
    OR              reduce using rule 46 (expr -> num .)
    AND             reduce using rule 46 (expr -> num .)
    ,               reduce using rule 46 (expr -> num .)
    ]               reduce using rule 46 (expr -> num .)
    )               reduce using rule 46 (expr -> num .)
    :               reduce using rule 46 (expr -> num .)
    TO              reduce using rule 46 (expr -> num .)


state 36

    (47) expr -> str .

    ;               reduce using rule 47 (expr -> str .)
    [               reduce using rule 47 (expr -> str .)
    ?               reduce using rule 47 (expr -> str .)
    +               reduce using rule 47 (expr -> str .)
    -               reduce using rule 47 (expr -> str .)
    *               reduce using rule 47 (expr -> str .)
    /               reduce using rule 47 (expr -> str .)
    %               reduce using rule 47 (expr -> str .)
    >               reduce using rule 47 (expr -> str .)
    <               reduce using rule 47 (expr -> str .)
    EQUALS          reduce using rule 47 (expr -> str .)
    HEQ             reduce using rule 47 (expr -> str .)
    LEQ             reduce using rule 47 (expr -> str .)
    NOTEQ           reduce using rule 47 (expr -> str .)
    OR              reduce using rule 47 (expr -> str .)
    AND             reduce using rule 47 (expr -> str .)
    ,               reduce using rule 47 (expr -> str .)
    ]               reduce using rule 47 (expr -> str .)
    )               reduce using rule 47 (expr -> str .)
    :               reduce using rule 47 (expr -> str .)
    TO              reduce using rule 47 (expr -> str .)


state 37

    (16) defvar -> VAR . type iden
    (17) defvar -> VAR . type iden = expr
    (51) type -> . INT
    (52) type -> . NULL
    (53) type -> . VECTOR

    INT             shift and go to state 6
    NULL            shift and go to state 7
    VECTOR          shift and go to state 8

    type                           shift and go to state 72

state 38

    (49) num -> NUMBER .

    ;               reduce using rule 49 (num -> NUMBER .)
    [               reduce using rule 49 (num -> NUMBER .)
    ?               reduce using rule 49 (num -> NUMBER .)
    +               reduce using rule 49 (num -> NUMBER .)
    -               reduce using rule 49 (num -> NUMBER .)
    *               reduce using rule 49 (num -> NUMBER .)
    /               reduce using rule 49 (num -> NUMBER .)
    %               reduce using rule 49 (num -> NUMBER .)
    >               reduce using rule 49 (num -> NUMBER .)
    <               reduce using rule 49 (num -> NUMBER .)
    EQUALS          reduce using rule 49 (num -> NUMBER .)
    HEQ             reduce using rule 49 (num -> NUMBER .)
    LEQ             reduce using rule 49 (num -> NUMBER .)
    NOTEQ           reduce using rule 49 (num -> NUMBER .)
    OR              reduce using rule 49 (num -> NUMBER .)
    AND             reduce using rule 49 (num -> NUMBER .)
    ,               reduce using rule 49 (num -> NUMBER .)
    ]               reduce using rule 49 (num -> NUMBER .)
    )               reduce using rule 49 (num -> NUMBER .)
    :               reduce using rule 49 (num -> NUMBER .)
    TO              reduce using rule 49 (num -> NUMBER .)


state 39

    (50) str -> STR .

    ;               reduce using rule 50 (str -> STR .)
    [               reduce using rule 50 (str -> STR .)
    ?               reduce using rule 50 (str -> STR .)
    +               reduce using rule 50 (str -> STR .)
    -               reduce using rule 50 (str -> STR .)
    *               reduce using rule 50 (str -> STR .)
    /               reduce using rule 50 (str -> STR .)
    %               reduce using rule 50 (str -> STR .)
    >               reduce using rule 50 (str -> STR .)
    <               reduce using rule 50 (str -> STR .)
    EQUALS          reduce using rule 50 (str -> STR .)
    HEQ             reduce using rule 50 (str -> STR .)
    LEQ             reduce using rule 50 (str -> STR .)
    NOTEQ           reduce using rule 50 (str -> STR .)
    OR              reduce using rule 50 (str -> STR .)
    AND             reduce using rule 50 (str -> STR .)
    ,               reduce using rule 50 (str -> STR .)
    ]               reduce using rule 50 (str -> STR .)
    )               reduce using rule 50 (str -> STR .)
    :               reduce using rule 50 (str -> STR .)
    TO              reduce using rule 50 (str -> STR .)


state 40

    (4) func -> DEF type iden ( flist ) RETURN expr . ;
    (24) expr -> expr . [ expr ]
    (26) expr -> expr . ? expr : expr
    (27) expr -> expr . + expr
    (28) expr -> expr . - expr
    (29) expr -> expr . * expr
    (30) expr -> expr . / expr
    (31) expr -> expr . % expr
    (32) expr -> expr . > expr
    (33) expr -> expr . < expr
    (34) expr -> expr . EQUALS expr
    (35) expr -> expr . HEQ expr
    (36) expr -> expr . LEQ expr
    (37) expr -> expr . NOTEQ expr
    (38) expr -> expr . OR expr
    (39) expr -> expr . AND expr
